# pharmaclaw

./: .gitignore  README.md  index.html  wrangler.jsonc
motw/: archive.html  preview.html
motw/archive/: 2026-04-01.json  2026-04-15.json  2026-04-22.json  2026-04-29.json  2026-05-06.json  2026-05-13.json
pharmaclaw/: agent-interaction-analysis.md  commercial_30s_build.py  commercial_30s_fix.py  commercial_30s_script.md  commercial_render.py  commercial_render_v2.py  full_demo_build.py  full_demo_timing.json  full_record_all.py  full_record_continue.py  full_record_pass1.py  full_record_pass2.py  full_record_pass3.py  index.html  order-confirm.html  order.html  poc_final.py  poc_narrate.py  poc_quick.py  poc_record.py  poc_v2.py  poc_v3_record.py  reddit-posts.md  youtube-demo-script.md  youtube-script.md
pharmaclaw-cli/: README.md  pharmaclaw_cli.py  setup.py
pharmaclaw-cli/agents/: __init__.py  catalyst.py  chemistry.py  ip_check.py  literature.py  market.py  pharmacology.py  synthesis.py  toxicology.py
pharmaclaw-cli/orchestration/: __init__.py  cheminem_orchestrator.py  llm_consensus.py  tools.py
pharmaclaw-cli/tests/: __init__.py  (+2 more)
pharmaclaw-pkg/: LICENSE  README.md  pyproject.toml
pharmaclaw-pkg/src/pharmaclaw/: __init__.py  cli.py
pharmaclaw-pkg/src/pharmaclaw/agents/: WALKTHROUGH.md  __init__.py  base.py  catalyst_agent.py  chemistry_agent.py  ip_agent.py  literature_agent.py  market_agent.py  pharmacology_agent.py  pipeline.py  synthesis_agent.py  toxicology_agent.py
pharmaclaw-pkg/src/pharmaclaw/core/: __init__.py  _pubchem.py  catalyst.py  cheminformatics.py  chemistry.py  ip_check.py  literature.py  market.py  pharmacology.py  synthesis.py  toxicology.py
pharmaclaw-pkg/src/pharmaclaw/orchestration/: __init__.py
pharmaclaw-pkg/src/pharmaclaw/utils/: __init__.py  auth.py  piping.py
pharmaclaw-pkg/tests/: test_core.py
scripts/: deploy.sh
(+29 files in other folders)
