[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pharmaclaw"
version = "1.0.0"
description = "AI-powered drug discovery pipeline — 9 chained agents for chemistry, ADME, toxicology, synthesis, IP, and more."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "PharmaClaw Team", email = "cheminem602@gmail.com" },
]
keywords = ["drug-discovery", "cheminformatics", "rdkit", "adme", "pharmacology", "toxicology"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "rdkit",
    "click>=8.0",
    "requests>=2.28",
]

[project.optional-dependencies]
agents = ["litellm>=1.30"]
pubchem = ["pubchempy>=1.0"]
orchestration = ["langchain>=0.2", "langgraph>=0.1"]
reports = ["matplotlib>=3.7", "Pillow>=9.0"]
all = ["pharmaclaw[agents,pubchem,orchestration,reports]"]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
pharmaclaw = "pharmaclaw.cli:pharmaclaw"

[project.urls]
Homepage = "https://pharmaclaw.com"
Documentation = "https://pharmaclaw.com/docs"
Repository = "https://github.com/CheminemPharmaclaw/pharmaclaw"
Issues = "https://github.com/CheminemPharmaclaw/pharmaclaw/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pharmaclaw"]

[tool.pytest.ini_options]
testpaths = ["tests"]
